[package]
name = "blog-creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
chrono = "0.4.23"
clap = { version = "4.0.27", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] } 
